Fixed the overlap that blocked scale in tele
fixed tiny bullshit

--- a/splashAutoTele.css
+++ b/splashAutoTele.css
@@ -281,7 +281,7 @@ html {
 #teleClimbLeft{
 	position: absolute;
 	left: 20px;
-	top: 550px;
+	top: 650px;
 }
 #teleExchangeSpan{
 
